# vbnt-j_telstra_18.1.c.384_1_20210401

./: 0003-bankmgr-TCH-License-to-Copyright-Notice.patch  vbnt-j_telstra_18.1.c.384_1_20210401.readme.txt
6rd/pkg/: Makefile
bankmgr/pkg/: Makefile
bankmgr/src/bankmgr-1.0/: Makefile  bankmgr.h  bankmgr_checksum.c  bankmgr_p.h  bankmgr_proc.c  bankmgr_proc.h  bankmgr_rawstorage_core.c  bankmgr_rawstorage_os.c  bankmgr_ubi.c  legacy_upgrade_info.h  main.c  storage_core.c  storage_core.h  storage_crc32.c  storage_crc32.h  storage_kernel.c
base-files/pkg/: Makefile
bcm963xx-wdt/pkg/: Makefile
bcm963xx-wdt/src/bcm963xx-wdt-2014.03/: bcm963xx-wdt.c
bcm_userspace/pkg/: Makefile
bcm_userspace/src/bcm_userspace-5.02L.03/: CMakeLists.txt
bcm_userspace/src/bcm_userspace-5.02L.03/src/: bcmswconfig.c  bcmvopiconfig.c
busybox/pkg/: Config-defaults.in  Makefile
busybox/pkg/patches/: 356-tch-CVE-2016-6301-ntpd-respond-only-to-client-and-symmetric-active-packets.patch
button-hotplug/pkg/: Makefile
buttons/: modules.list
buttons/pkg/: Makefile
buttons/src/technicolor-button-1.0/: board_button_defines.c  board_button_defines.h  main.c
comgt/: modules.list  source.txt
comgt/pkg/files/: ncm.sh
cups/: modules.list  source.txt
cups/pkg/: Makefile
ddns-scripts/pkg/: Makefile
dhcpsnooper-tch/pkg/: Makefile
dnsmasq/pkg/: Makefile
firewall/: source.txt
firewall/pkg/: Makefile
gobinet/pkg/: Makefile
gobiserial/: modules.list
gobiserial/pkg/: Makefile
iproute2/: modules.list  source.txt
iproute2/pkg/: Makefile
ipset/: modules.list  source.txt
ipset-helper-tch/pkg/: Makefile
ipset/pkg/: Makefile
iptables/: modules.list  source.txt
iptables/pkg/: Makefile
kernel/: source.txt
leds/pkg/: Makefile
libcap/: modules.list  source.txt
libcli/: source.txt
libcli/pkg/: Makefile
libjpeg/: modules.list  source.txt
libjson-c/pkg/: Makefile
libpng/: modules.list  source.txt
libubox/: source.txt
libubox/pkg/: Makefile
liburcu/: modules.list  source.txt
liburcu/pkg/: Makefile
linux/: modules.list
lxc/: modules.list  source.txt
lxc/pkg/: Makefile
map/: modules.list
map/pkg/: Makefile
miniupnpd-tch/pkg/: Makefile
mmpbxfwctl/: modules.list
mmpbxfwctl/pkg/: Makefile
mmpbxfwctl/src/mmpbxfwctl-1.0/: CMakeLists.txt
mmpbxfwctl/src/mmpbxfwctl-1.0/cmake/: FindIP4TC.cmake  FindIPTEXT.cmake  FindXTABLES.cmake
mmpbxfwctl/src/mmpbxfwctl-1.0/src/: iptables.c  iptablesdaemon.c  xshared.c  xshared.h
modmmswitch/pkg/: Makefile
mountd/: source.txt
mountd/pkg/: Makefile
multimon-ng/: modules.list  source.txt
multimon-ng/pkg/: Makefile
mwan/: modules.list
mwan/pkg/: Makefile
mwan/pkg/src/: CMakeLists.txt  main.c
nat46/: modules.list  source.txt
nat46/pkg/: Makefile
ncr-tch/pkg/: Makefile
netifd/pkg/: Makefile
odhcp6c/: source.txt
odhcp6c/pkg/: Makefile
odhcpd/: source.txt
odhcpd/pkg/: Makefile
opkg/: source.txt
opkg/pkg/: Makefile
picocom/: modules.list  source.txt
platform-gpl/pkg/: Makefile
ppp/: modules.list
ppp/pkg/: Makefile
preloader-tch/: modules.list
preloader-tch/pkg/: COPYING  Makefile
preloader-tch/pkg/src/: CMakeLists.txt  mwan.c  mwan.h  preload.c  preload.h  qos.c  qos.h
procd/: source.txt
procd/pkg/: Makefile
qflash/: modules.list
qflash/pkg/: Makefile
ql-tty2tcp/: modules.list
ql-tty2tcp/pkg/: Makefile
qmbnflash/: modules.list
qmbnflash/pkg/: Makefile
ripdrv/pkg/: Makefile
tomcrypt/pkg/: Makefile
tommath/pkg/: Makefile
toolchain/pkg/: Makefile
ubox/: source.txt
ubox/pkg/: Makefile
ubus/: source.txt
ubus/pkg/: Makefile
uci/: source.txt
uci/pkg/: Makefile
util-linux/: modules.list
weburl-nfq/: modules.list
weburl-nfq/pkg/: Makefile
weburl-nfq/src/weburl-nfq-1.0/: .gitignore  CMakeLists.txt
weburl-nfq/src/weburl-nfq-1.0/cmake/: FindNFQUEUE.cmake  FindPCAP.cmake  FindUCI.cmake  FindURCU.cmake
weburl-nfq/src/weburl-nfq-1.0/include/: config.h  nfq.h  ubus.h  urlfilterd.h
weburl-nfq/src/weburl-nfq-1.0/src/: config.c  main.c  nfq.c  ubus.c
xl2tpd/: source.txt
xtables-addons/: modules.list
xtables-addons/pkg/: Makefile
zlib/: source.txt
zlib/pkg/: Makefile
(+9269 files in other folders)
