cmake_minimum_required(VERSION 2.8)

PROJECT(mmpbxfwctl C)
SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})

find_package(IP4TC REQUIRED)
find_package(XTABLES REQUIRED)
find_package(IPTEXT REQUIRED)

SET(HDRS ${HDRS} ${CMAKE_CURRENT_SOURCE_DIR}/src ${LIBIP4TC_INCLUDE_DIRS} ${LIBXTABLES_INCLUDE_DIRS})
ADD_DEFINITIONS(-DXTABLES_INTERNAL -Wall -Werror -Wno-error=sign-compare)

SET(SOURCES src/iptables.c src/iptablesdaemon.c src/xshared.c)

ADD_EXECUTABLE(mmpbxfwctl ${SOURCES})
TARGET_LINK_LIBRARIES(mmpbxfwctl ${LIBIP4TC_LIBRARIES} ${LIBIPTEXT_LIBRARIES} ${LIBXTABLES_LIBRARIES} )
INSTALL(TARGETS mmpbxfwctl RUNTIME DESTINATION bin)
